publish: Z-index bug fix
generated from commit 8f1bbf7c658577b1f3f43114dabea28b5f94ebae

--- a/css/app.css
+++ b/css/app.css
@@ -5961,6 +5961,7 @@ footer {
 .page-nav {
   display: block;
   position: relative;
+  z-index: -1;
   top: 133.5px;
   font-family: 'Oxygen', sans-serif;
   font-weight: bolder; }
@@ -6094,4 +6095,5 @@ footer {
   float: right;
   color: #78C042;
   margin-bottom: 25px; }
+
 /*# sourceMappingURL=app.css.map */
